--- a/weatherProject/index.html
+++ b/weatherProject/index.html
@@ -14,7 +14,7 @@
   <title>Vite + React + TS</title>
 </head>
 
-<body>
+<body class="body">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
